# geeflow

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
geeflow/: ccdc_utils.py  ccdc_utils_test.py  coords.py  coords_test.py  ee_algo.py  ee_data.py  ee_data_test.py  ee_export_utils.py  ee_tests_mocks.py  export_beam_tfds.py  export_rasters.py  pipelines.py  times.py  times_test.py  utils.py  utils_test.py  utm_lib.py
geeflow/configs/public/: demo.py  global_drivers_1km_2022_v1.py
geeflow/data/: demo_labels.csv
geeflow/stats/: compute_stats_beam.py  compute_stats_beam_utils.py  stats_util.py  stats_util_test.py
search/: search_index.json
